dev_server.log

> deployify@0.1.0 dev
> next dev

▲ Next.js 16.1.6 (Turbopack)
- Local:         http://localhost:3000
- Network:       http://192.168.0.2:3000
- Experiments (use with caution):
  · serverActions

✓ Starting...
Attention: Next.js now collects completely anonymous telemetry regarding usage.
This information is used to shape Next.js' roadmap and prioritize features.
You can learn more, including how to opt-out if you'd not like to participate in this anonymous program, by visiting the following URL:
https://nextjs.org/telemetry

✓ Ready in 1650ms
○ Compiling /join ...
╔═══════════════════════════════════════════════════════════════════╗
║ [Config] WARNING: Missing required environment variables          ║
╠═══════════════════════════════════════════════════════════════════╣
║  - GITHUB_CLIENT_ID                                               ║
║  - GITHUB_CLIENT_SECRET                                           ║
║  - GITHUB_WEBHOOK_SECRET                                          ║
║  - GCP_PROJECT_ID                                                 ║
║  - JWT_SECRET                                                     ║
║  - ENCRYPTION_KEY (or JWT_SECRET)                                 ║
╚═══════════════════════════════════════════════════════════════════╝
[Config] Some features may not work correctly until these are set.
WARNING: ENCRYPTION_KEY or JWT_SECRET not set. Secrets encryption will fail.
 GET /join 200 in 8.3s (compile: 6.7s, proxy.ts: 343ms, render: 1230ms)
WARNING: ENCRYPTION_KEY or JWT_SECRET not set. Secrets encryption will fail.
In-house collector error: SyntaxError: Unexpected end of JSON input
    at JSON.parse (<anonymous>)
    at POST (src/app/api/v1/collect/route.ts:13:32)
  11 | export async function POST(req: NextRequest) {
  12 |     try {
> 13 |         const body = await req.json();
     |                                ^
  14 |         // eslint-disable-next-line @typescript-eslint/no-unused-vars
  15 |         const { id, type, path, referrer, width, metrics, apiKey } = body;
  16 |
